--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Testing"></activity>
         <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".Register">
+        <activity android:name=".Register"></activity>
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" />
         <activity android:name=".Home" />
         <activity android:name=".MainActivity" />
     </application>
