--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:10.0.1'
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-analytics:15.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
     implementation 'junit:junit:4.12'
 }
